parcial/.metadata/.plugins/org.eclipse.cdt.ui/parcial.build.log
20:57:00 **** Incremental Build of configuration Debug for project parcial ****
make all 
Building file: ../src/Controller.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Controller.d" -MT"src/Controller.o" -o "src/Controller.o" "../src/Controller.c"
../src/Controller.c: In function ‘controller_mapComputers’:
../src/Controller.c:159:30: warning: passing argument 2 of ‘ll_map’ from incompatible pointer type [-Wincompatible-pointer-types]
       ll_map(pListaComputers,computer_mapIdTipo);
                              ^~~~~~~~~~~~~~~~~~
In file included from ../src/Parser.h:4:0,
                 from ../src/Controller.c:7:
../src/LinkedList.h:57:5: note: expected ‘void (*)(void *)’ but argument is of type ‘int (*)(void *)’
 int ll_map(LinkedList* this,void (*pFunc)(void*));
     ^~~~~~
Finished building: ../src/Controller.c
 
Building file: ../src/LinkedList.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/LinkedList.d" -MT"src/LinkedList.o" -o "src/LinkedList.o" "../src/LinkedList.c"
Finished building: ../src/LinkedList.c
 
Building file: ../src/Parser.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Parser.d" -MT"src/Parser.o" -o "src/Parser.o" "../src/Parser.c"
../src/Parser.c: In function ‘parser_parseComputers’:
../src/Parser.c:18:56: warning: format ‘%[^
   ’ expects a matching ‘char *’ argument [-Wformat=]
     fscanf(fileName, "%[^,],%[^,],%[^,],%[^,],%[^,],%[^\n]\n",auxId,
                                                        ^
Finished building: ../src/Parser.c
 
Building file: ../src/computer.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/computer.d" -MT"src/computer.o" -o "src/computer.o" "../src/computer.c"
../src/computer.c: In function ‘computer_newParametros’:
../src/computer.c:21:45: warning: passing argument 2 of ‘computer_setIdTipo’ makes integer from pointer without a cast [-Wint-conversion]
     int setIdTipo = computer_setIdTipo(aux, idTipoStr);
                                             ^~~~~~~~~
In file included from ../src/computer.c:5:0:
../src/computer.h:30:5: note: expected ‘int’ but argument is of type ‘char *’
 int computer_setIdTipo(Computer* this,int idTipo);
     ^~~~~~~~~~~~~~~~~~
../src/computer.c:22:45: warning: passing argument 2 of ‘computer_setOferta’ makes integer from pointer without a cast [-Wint-conversion]
     int setOferta = computer_setOferta(aux, ofertaStr);
                                             ^~~~~~~~~
In file included from ../src/computer.c:5:0:
../src/computer.h:34:5: note: expected ‘int’ but argument is of type ‘char *’
 int computer_setOferta(Computer* this,int oferta);
     ^~~~~~~~~~~~~~~~~~
../src/computer.c: In function ‘computer_setOferta’:
../src/computer.c:197:20: error: assignment to expression with array type
       this->oferta = oferta;
                    ^
../src/computer.c: In function ‘computer_getOferta’:
../src/computer.c:208:13: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
     *oferta = this->oferta;
             ^
../src/computer.c: In function ‘computer_compareIdTipo’:
../src/computer.c:216:15: warning: passing argument 1 of ‘strcmp’ makes pointer from integer without a cast [-Wint-conversion]
     if(strcmp(((Computer*)pComputerA)->idTipo,((Computer*)pComputerB)->idTipo) > 0) {
               ^
In file included from ../src/computer.c:3:0:
src/subdir.mk:33: fallo en las instrucciones para el objetivo 'src/computer.o'
/usr/include/string.h:140:12: note: expected ‘const char *’ but argument is of type ‘int’
 extern int strcmp (const char *__s1, const char *__s2)
            ^~~~~~
../src/computer.c:216:47: warning: passing argument 2 of ‘strcmp’ makes pointer from integer without a cast [-Wint-conversion]
     if(strcmp(((Computer*)pComputerA)->idTipo,((Computer*)pComputerB)->idTipo) > 0) {
                                               ^
In file included from ../src/computer.c:3:0:
/usr/include/string.h:140:12: note: expected ‘const char *’ but argument is of type ‘int’
 extern int strcmp (const char *__s1, const char *__s2)
            ^~~~~~
../src/computer.c:219:15: warning: passing argument 1 of ‘strcmp’ makes pointer from integer without a cast [-Wint-conversion]
     if(strcmp(((Computer*)pComputerA)->idTipo,((Computer*)pComputerB)->idTipo) < 0) {
               ^
In file included from ../src/computer.c:3:0:
/usr/include/string.h:140:12: note: expected ‘const char *’ but argument is of type ‘int’
 extern int strcmp (const char *__s1, const char *__s2)
            ^~~~~~
../src/computer.c:219:47: warning: passing argument 2 of ‘strcmp’ makes pointer from integer without a cast [-Wint-conversion]
     if(strcmp(((Computer*)pComputerA)->idTipo,((Computer*)pComputerB)->idTipo) < 0) {
                                               ^
In file included from ../src/computer.c:3:0:
/usr/include/string.h:140:12: note: expected ‘const char *’ but argument is of type ‘int’
 extern int strcmp (const char *__s1, const char *__s2)
            ^~~~~~
../src/computer.c: In function ‘computer_mapIdTipo’:
../src/computer.c:229:8: error: assignment to expression with array type
   info = "SIN DATOS";
        ^
../src/computer.c:230:33: warning: passing argument 2 of ‘computer_getOferta’ from incompatible pointer type [-Wincompatible-pointer-types]
   computer_getOferta(pComputer, info);
                                 ^~~~
../src/computer.c:205:5: note: expected ‘int *’ but argument is of type ‘char *’
 int computer_getOferta(Computer* this,int* oferta) {
     ^~~~~~~~~~~~~~~~~~
../src/computer.c:234:33: warning: passing argument 2 of ‘computer_getOferta’ from incompatible pointer type [-Wincompatible-pointer-types]
   computer_getOferta(pComputer, info);
                                 ^~~~
../src/computer.c:205:5: note: expected ‘int *’ but argument is of type ‘char *’
 int computer_getOferta(Computer* this,int* oferta) {
     ^~~~~~~~~~~~~~~~~~
../src/computer.c: In function ‘filtrar’:
../src/computer.c:244:32: warning: passing argument 2 of ‘computer_getIdTipo’ makes pointer from integer without a cast [-Wint-conversion]
   computer_getIdTipo(computer, comp);
                                ^~~~
../src/computer.c:170:5: note: expected ‘int *’ but argument is of type ‘int’
 int computer_getIdTipo(Computer* this,int* idTipo) {
     ^~~~~~~~~~~~~~~~~~
make: *** [src/computer.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

20:57:01 Build Failed. 4 errors, 12 warnings. (took 400ms)

